--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,21 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    background-color: rgba(251, 189, 251, 0.473);
+}
+
+.notepad {
+    border: solid black 1px;
+    width: 33%;
+    box-shadow: black;
+    background-color: lavenderblush;
+}
+
+.input {
+    color: red;
+    box-sizing: border-box;
+    width: 75%;
+    margin-left: 3px;
+    
+}
